# LogLookup.AI

./: .gitignore  LICENSE  README.md  config.example.yaml  preview_ui.py  pyproject.toml
deploy/: install.sh  loglookup.desktop  requirements-lock.txt  uninstall.sh
deploy/systemd/: loglookup.service
docs/: Developerguide.md  User guide.md  architecture.md  product.md
engine/: __init__.py  app.py  appdirs.py  config.py  ingest.py  log.py  pipeline.py  sdnotify.py  server.py  settings.py
engine/ai/: __init__.py  kb.py  ollama.py  payload.py  prompts.py  provider.py  reasoner.py  report.py  retriever.py  schema.py  service.py  validator.py
engine/api/: __init__.py  server.py  setup.py  views.py
engine/connectors/: __init__.py  elastic.py  writeback.py
engine/correlate/: __init__.py  chains.py  cluster_id.py  engine.py  entities.py  risk.py
engine/dashboard/: __init__.py
engine/dashboard/static/: incident.html  setup.html  theme.css
engine/normalize/: __init__.py  mapping.py  ocsf.py  ocsf_bridge.py  timeutil.py
engine/normalize/adapters/: __init__.py  base.py  elastic_adapter.py  file_adapter.py  (+2 more)
engine/prefilter/: __init__.py  rules.py
engine/redact/: __init__.py  redactor.py
engine/secure/: __init__.py  store.py
tests/: conftest.py  test_api.py  test_config.py  test_connector.py  test_correlation.py  test_entities.py  test_hardening.py  test_ingest.py  test_kb.py  test_normalizer.py  test_ocsf.py  test_ollama.py  test_pipeline.py  test_prefilter.py  test_provider.py  test_reasoner.py  test_redaction.py  test_report.py  test_retriever.py  test_risk.py  test_secure_store.py  test_settings.py  test_setup_api.py  test_writeback.py
tests/fixtures/: attack_chain.ndjson
(+10 files in other folders)
