[project]
name = "loglookup-ai"
version = "0.3.0"
description = "LogLookup AI SIEM alert normalization, deterministic correlation, RAG grounded AI triage, Elastic write-back, and attack chain dashboard."
requires-python = ">=3.11,<3.14"
dependencies = [
    "msgspec>=0.19",
    "py-ocsf-models>=0.9.0",
    "networkx>=3.2",
    "PyYAML>=6.0",
    "httpx>=0.27",
    # AI layer: multi provider LLM abstraction + validated structured output
    "litellm>=1.70",
    "instructor>=1.9",
    "orjson>=3.10",           # required by litellm's runtime call path
    # Backend API + dashboard serving
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # RAG ATT&CK store (vector index; embeddings are the optional heavy part)
    "faiss-cpu>=1.8",
    # Encrypted local secret store (already in the tree via py-ocsf-models)
    "cryptography>=42",
]

[project.scripts]
loglookup = "engine.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
# Embedding model for the documented vector retriever (pulls torch).
# Without it the engine uses the deterministic lexical BM25 retriever.
rag = [
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["engine*"] } }

[tool.setuptools.package-data]
"engine.normalize.adapters" = ["mappings/*.yaml"]
"engine.dashboard" = ["static/*.html", "static/*.css", "static/js/*.js",
                      "static/vendor/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
